# marvel-champions-py

./: .env.example  .gitignore  BACKEND_AUDIT.md  CONTROLLER_TESTING.md  DESIGN_PHILOSOPHY.md  DEVELOPER_GUIDE.md  DOCUMENTATION_CHECKLIST.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.md  DRAG_DROP_UPDATE.md  FIXES.md  HAND_BAR_UPDATE.md  LOGGING_AND_PARSING.md  OPENAPI_GUIDE.md  OPENAPI_QUICKREF.md  README.md  README_UI.md  READY_FOR_UI.md  SWAGGER_SETUP.md  TESTING_COMPLETE.md  TEST_PATTERNS.md  TEST_SUMMARY.md  app.py  config.py  diagnose.sh  generate_interactors.py  logging_service.py  marvel-setup-script.py  migrate_to_modern.sh  openapi.yaml  package-lock.json  pyproject.toml  pytest.ini  repositoryIT.py  requirements-dev.txt  requirements.txt  run_tests.py  run_tests.sh  start-servers.sh  stop-servers.sh  (+2 more)
.github/workflows/: test.yml
boundaries/: __init__.py  image_storage.py  repository.py
entities/: __init__.py  card.py  deck.py  encounter.py  game.py  module.py
gateways/: marvelcdb_client.py
repositories/: mongo_card_repository.py  mongo_deck_repository.py  mongo_game_repository.py
src/: api_documentation.py  app.py  logging_conf.py  swagger_ui.py
tests/: __init__.py  conftest.py  test_api_integration.py  test_card_in_play.py  test_controllers.py  test_entities.py  test_gateways.py  test_interactors.py  test_interactors_advanced.py  test_lobby.py  test_lobby_api.py  test_lobby_controller.py  test_lobby_interactor.py  test_repositories.py
ui/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
(+126 files in other folders)
